--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">ServiceTest</string>
+    <string name="service">service</string>
+    <string name="foreground_service">foreground_service</string>
+    <string name="intent_service">intent_service</string>
+    <string name="job_dispatcher">job_dispatcher</string>
+    <string name="job_intent_service">job_intent_service</string>
+    <string name="alarm_manager">alarm_manager</string>
+    <string name="work_manager">work_manager</string>
 </resources>
